# libpressi-r-metric

./: .gitignore  CMakeLists.txt  LICENSE  LibPressioRMetricConfig.cmake.in  README.md  libpressio_r_metric.pc.in
cmake/: FindRInside.cmake  rcpp_cxxflags.in  rcpp_ldflags.in  rinside_cxxflags.in  rinside_ldflags.in  rinside_version.in
include/: libpressio_r_metric.h
src/: libpressio_r_metric.cc  libpressio_r_metric_version.h.in
test/: CMakeLists.txt  test_libpressio_r_metric.cc
